# glib_logger

./: Cargo.toml  LICENSE  README.md
examples/: custom_log_function.rs  g_macro_domain.rs  override_macro_domain.rs  simple.rs  simple_domain.rs  target_domain.rs
src/: domain_macros.rs  lib.rs  logging.rs  redefined_log_macros.rs  tests.rs
