[package]
name = "glib_logger"
version = "0.1.0"
authors = ["Maciek Borzecki <maciek.borzecki@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/bboozzoo/glib_logger"
description = """
A logger which integrates with Glib message logging.
"""
categories = ["development-tools::debugging"]
keywords = ["logging", "log", "logger", "glib"]
license = "MIT"

[dependencies]
log = "0.4.0"
glib-sys = { version = "0.9.1", features = ["v2_44"] }

[features]
redefine_log_macros = []

[dev-dependencies]
serial_test = "0.4.0"

[[example]]
name = "override_macro_domain"
required-features = [ "redefine_log_macros" ]
